--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -69,7 +69,7 @@ jobs:
   create-release:
     needs: [linux-build]
     runs-on: "ubuntu-20.04"
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/appimage' || github.ref == 'refs/heads/appimage-dev'
     steps:
       - name: Download NoGUI AppImage Artifact
         uses: actions/download-artifact@v1
