create wayland appimage

--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -62,7 +62,17 @@ jobs:
         name: "linux-x64-appimage-qt-zsync"
         path: "build/duckstation-qt-x64.AppImage.zsync"
 
+    - name: Upload Wayland AppImage
+      uses: actions/upload-artifact@v1
+      with:
+        name: "linux-x64-appimage-wayland"
+        path: "build/duckstation-wayland-x64.AppImage"
 
+    - name: Upload Wayland AppImage zsync
+      uses: actions/upload-artifact@v1
+      with:
+        name: "linux-x64-appimage-wayland-zsync"
+        path: "build/duckstation-wayland-x64.AppImage.zsync"
   
   create-release:
     needs: [linux-build]
@@ -89,6 +99,16 @@ jobs:
         with:
           name: "linux-x64-appimage-qt-zsync"
 
+      - name: Download Wayland AppImage Artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: "linux-x64-appimage-wayland"
+
+      - name: Download Wayland AppImage zsync Artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: "linux-x64-appimage-wayland-zsync"
+          
       - name: Create preview release
         if: github.ref == 'refs/heads/appimage'
         uses: "marvinpinto/action-automatic-releases@latest"
@@ -102,7 +122,9 @@ jobs:
             linux-x64-appimage-nogui-zsync/duckstation-nogui-x64.AppImage.zsync
             linux-x64-appimage-qt/duckstation-qt-x64.AppImage
             linux-x64-appimage-qt-zsync/duckstation-qt-x64.AppImage.zsync
-
+            linux-x64-appimage-wayland/duckstation-wayland-x64.AppImage
+            linux-x64-appimage-wayland-zsync/duckstation-wayland-x64.AppImage.zsync
+            
       - name: Create dev release
         if: github.ref == 'refs/heads/appimage-dev'
         uses: "marvinpinto/action-automatic-releases@latest"
@@ -116,3 +138,5 @@ jobs:
             linux-x64-appimage-nogui-zsync/duckstation-nogui-x64.AppImage.zsync
             linux-x64-appimage-qt/duckstation-qt-x64.AppImage
             linux-x64-appimage-qt-zsync/duckstation-qt-x64.AppImage.zsync
+            linux-x64-appimage-wayland/duckstation-wayland-x64.AppImage
+            linux-x64-appimage-wayland-zsync/duckstation-wayland-x64.AppImage.zsync
