--- a/src/duckstation-qt/duckstation-qt.rc
+++ b/src/duckstation-qt/duckstation-qt.rc
@@ -50,8 +50,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,0,0,1
+ FILEVERSION VER_FILE_VERSION
+ PRODUCTVERSION VER_PRODUCT_VERSION
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -73,7 +73,7 @@ BEGIN
             VALUE "LegalCopyright", "Copyright (C) 2020 Stenzek and collaborators"
             VALUE "OriginalFilename", "duckstation-qt.exe"
             VALUE "ProductName", "DuckStation Qt Frontend"
-            VALUE "ProductVersion", VER_PRODUCTNAME_STR "\0"
+            VALUE "ProductVersion", VER_PRODUCT_VERSION_STR "\0"
         END
     END
     BLOCK "VarFileInfo"
