--- a/src/duckstation-qt/duckstation-qt.rc
+++ b/src/duckstation-qt/duckstation-qt.rc
@@ -1,5 +1,6 @@
 // Microsoft Visual C++ generated resource script.
 //
+#include <string>
 #include "resource.h"
 
 #define APSTUDIO_READONLY_SYMBOLS
