--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -36,7 +36,7 @@ jobs:
         echo #define SCM_RELEASE_TAG "preview" >> src/scmversion/tag.h
 
 
-    - name: Tag as dev build
+    - name: Tag as dev builds
       if: github.ref == 'refs/heads/dev'
       shell: cmd
       run: |
