--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -29,6 +29,19 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install cmake ninja-build ccache libsdl2-dev libgtk-3-dev qtbase5-dev qtbase5-dev-tools qtbase5-private-dev qt5-default qttools5-dev qtwayland5 libegl1-mesa-dev libevdev-dev libgbm-dev libdrm-dev libqt5waylandclient5-dev libqt5waylandcompositor5-dev libwayland-dev libwayland-egl-backend-dev extra-cmake-modules libcurl4-gnutls-dev libxrandr-dev
 
+    - name: Install QT6
+      shell: bash
+      env:
+        QTVERSION: 6.2.0
+      run: |
+        echo "QTVERSION ${QTVERSION}"
+        curl -sLO https://download.qt.io/official_releases/qt/6.2/6.2.0/single/qt-everywhere-src-${QTVERSION}.tar.xz
+        tar xvf qt-everywhere-src-${QTVERSION}.tar.xz
+        cd qt-everywhere-src-${QTVERSION}
+        ./configure -prefix /usr
+        cmake --build .
+        cmake --install .
+      
     - name: Compile build
       shell: bash
       run: |
@@ -77,7 +90,7 @@ jobs:
   create-release:
     needs: [linux-build]
     runs-on: "ubuntu-20.04"
-    if: github.ref == 'refs/heads/appimage' || github.ref == 'refs/heads/appimage-dev'
+    if: github.ref == 'refs/heads/appimage' || github.ref == 'refs/heads/QT6'
     steps:
       - name: Download NoGUI AppImage Artifact
         uses: actions/download-artifact@v1
@@ -126,13 +139,13 @@ jobs:
             linux-x64-appimage-wayland-zsync/duckstation-wayland-x64.AppImage.zsync
             
       - name: Create dev release
-        if: github.ref == 'refs/heads/appimage-dev'
+        if: github.ref == 'refs/heads/QT6'
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
-          title: "Latest Development Build"
+          title: "QT6 Development Build"
           files: |
             linux-x64-appimage-nogui/duckstation-nogui-x64.AppImage
             linux-x64-appimage-nogui-zsync/duckstation-nogui-x64.AppImage.zsync
