--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -28,7 +28,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get -y install cmake ninja-build ccache libsdl2-dev libgtk-3-dev qtbase5-dev qtbase5-dev-tools qtbase5-private-dev qt5-default qttools5-dev qtwayland5 libegl1-mesa-dev libevdev-dev libgbm-dev libdrm-dev libqt5waylandclient5-dev libqt5waylandcompositor5-dev libwayland-dev libwayland-egl-backend-dev extra-cmake-modules libcurl4-gnutls-dev libxrandr-dev
-
+        sudo apt-get -y install libxcb1-dev libxcb-xinput-dev libxcb-xkb-dev libx11-xcb-dev libxkbcommon-x11-dev gstreamer1.0-gl gstreamer1.0-gtk3
+        
     - name: Install QT6
       shell: bash
       env:
