--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -37,9 +37,9 @@ jobs:
       run: |
         echo "QTVERSION ${QTVERSION}"
         curl -sLO https://download.qt.io/official_releases/qt/6.2/6.2.0/single/qt-everywhere-src-${QTVERSION}.tar.xz
-        tar xvf qt-everywhere-src-${QTVERSION}.tar.xz
+        tar xf qt-everywhere-src-${QTVERSION}.tar.xz
         cd qt-everywhere-src-${QTVERSION}
-        ./configure -prefix /usr
+        ./configure -prefix /usr -bundled-xcb-xinput
         cmake --build .
         cmake --install .
       
