--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Compile build
       shell: bash
       env:
-        Qt6_DIR: "${{ github_workspace }}/qt/6.2.0"
+        Qt6_DIR: "${GITHUB_WORKSPACE}/qt/6.2.0"
       run: |
         echo "HOME ${GITHUB_WORKSPACE}"
         echo "Qt6_DIR ${Qt6_DIR}"
