--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -57,8 +57,8 @@ jobs:
         Qt6_DIR: "qt/6.2.0"
       run: |
         echo "HOME ${GITHUB_WORKSPACE}"
-        export $CMAKE_PREFIX_PATH=$Qt6_DIR/gcc_64 
-        export Qt6_DIR=${GITHUB_WORKSPACE}/$Qt6_DIR/gcc_64/lib/cmake/Qt6/
+        export CMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/$Qt6_DIR/gcc_64
+        export Qt6_DIR=${CMAKE_PREFIX_PATH}/lib/cmake/Qt6/
         echo "Qt6_DIR ${Qt6_DIR}"
         find qt/ -name Qt6Config.cmake 
         mkdir build
