--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -105,7 +105,38 @@ jobs:
       with:
         name: "linux-x64-appimage-wayland-zsync"
         path: "build/duckstation-wayland-x64.AppImage.zsync"
-  
+
+  macos-build:
+    runs-on: macos-10.15
+    steps:
+    - uses: actions/checkout@v2.3.1
+      with:
+        fetch-depth: 0
+
+    - name: Install packages
+      shell: bash
+      run: |
+        brew install qt6 sdl2 curl
+    - name: Clone mac externals
+      shell: bash
+      run: |
+        git clone https://github.com/stenzek/duckstation-ext-mac.git dep/mac
+    - name: Compile and zip .app
+      shell: bash
+      run: |
+        mkdir build
+        cd build
+        export MACOSX_DEPLOYMENT_TARGET=10.14
+        cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_NOGUI_FRONTEND=OFF -DBUILD_QT_FRONTEND=ON -DUSE_SDL2=ON -DQt6_DIR=/usr/local/opt/qt@6/lib/cmake/Qt6 ..
+        cmake --build . --parallel 2
+        cd bin
+        zip -r duckstation-mac-release.zip DuckStation.app/
+    - name: Upload macOS .app
+      uses: actions/upload-artifact@v1
+      with:
+        name: "macos-x64"
+        path: "build/bin/duckstation-mac-release.zip"
+        
   create-release:
     needs: [linux-build]
     runs-on: "ubuntu-20.04"
