--- a/src/duckstation-qt/CMakeLists.txt
+++ b/src/duckstation-qt/CMakeLists.txt
@@ -187,7 +187,10 @@ if(APPLE)
   # Copy Qt plugins into the bundle
   get_target_property(qtcocoa_location Qt6::Qt6QCocoaIntegrationPlugin LOCATION)
   target_sources(duckstation-qt PRIVATE "${qtcocoa_location}")
-  set_source_files_properties("${qtcocoa_location}" PROPERTIES MACOSX_PACKAGE_LOCATION MacOS/platforms)
+  #set_source_files_properties("${qtcocoa_location}" PROPERTIES MACOSX_PACKAGE_LOCATION MacOS/platforms)
+  qt_import_plugins(duckstation-qt
+    INCLUDE Qt6::QCocoaIntegrationPlugin
+  )
 
   get_target_property(qtmacstyle_location Qt6::Qt6QMacStylePlugin LOCATION)
   target_sources(duckstation-qt PRIVATE "${qtmacstyle_location}")
