--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,9 @@ if(NOT ANDROID)
   endif()
   if(BUILD_QT_FRONTEND)
     find_package(Qt6 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
+    if (NOT Qt6_FOUND)
+      find_package(Qt5 5.15 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
+    endif()
   endif()
 endif()
 
