--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -48,16 +48,17 @@ jobs:
     - name: Compile build
       shell: bash
       env:
-        Qt5_DIR: "opt/5.15.2"
+        Qt5_DIR: "opt/515"
         Qt6_DIR: "qt/6.2.0"
       run: |
         if [[ -e $Qt6_DIR ]]; then
           export CMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/$Qt6_DIR/gcc_64
           export Qt6_DIR=${CMAKE_PREFIX_PATH}/lib/cmake/Qt6/
-          echo "Qt6_DIR ${Qt6_DIR}"
           sudo mv /usr/bin/qmake /usr/bin/qmake5
           sudo ln -s ${GITHUB_WORKSPACE}/$(find qt/ -name qmake) /usr/bin
         else
+          export CMAKE_PREFIX_PATH=/$Qt5_DIR
+          export Qt5_DIR=${CMAKE_PREFIX_PATH}/lib/cmake/Qt5/          
           /opt/qt${QTVERMIN}/bin/qt${QTVERMIN}-env.sh
         fi
         mkdir build
