--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,10 +140,8 @@ if(NOT ANDROID)
     find_package(SDL2 REQUIRED)
   endif()
   if(BUILD_QT_FRONTEND)
-    find_package(Qt6 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
-    if (NOT Qt6_FOUND)
-      find_package(Qt5 5.15 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
-    endif()
+    find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
+    find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
   endif()
 endif()
 
