--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -48,16 +48,16 @@ jobs:
     - name: Compile build
       shell: bash
       env:
-        Qt5_DIR: "opt/qt515"
-        Qt6_DIR: "qt/6.2.0"
+        QT5_DIR: "opt/qt515"
+        QT6_DIR: "qt/6.2.0"
       run: |
-        if [[ -e $Qt6_DIR ]]; then
-          export CMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/$Qt6_DIR/gcc_64
+        if [[ -e $QT6_DIR ]]; then
+          export CMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/$QT6_DIR/gcc_64
           export Qt6_DIR=${CMAKE_PREFIX_PATH}/lib/cmake/Qt6/
           sudo mv /usr/bin/qmake /usr/bin/qmake5
           sudo ln -s ${GITHUB_WORKSPACE}/$(find qt/ -name qmake) /usr/bin
         else
-          export CMAKE_PREFIX_PATH=/$Qt5_DIR/lib/cmake
+          export CMAKE_PREFIX_PATH=/$QT5_DIR/lib/cmake
           export Qt5_DIR=${CMAKE_PREFIX_PATH}/Qt5/
           echo "CMAKE_PREFIX_PATH $CMAKE_PREFIX_PATH"
           echo "Qt5_DIR $Qt5_DIR"
