--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -61,7 +61,7 @@ jobs:
           export Qt5_DIR=${CMAKE_PREFIX_PATH}/Qt5/
           echo "CMAKE_PREFIX_PATH $CMAKE_PREFIX_PATH"
           echo "Qt5_DIR $Qt5_DIR"
-          source /opt/qt${QTVERMIN}/bin/qt${QTVERMIN}-env.sh
+          . /opt/qt${QTVERMIN}/bin/qt${QTVERMIN}-env.sh
         fi
         echo "Qt version $(qmake -v | grep 'Qt' | awk ' { print $4 } ')"
         mkdir build
