--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -61,7 +61,8 @@ jobs:
           export Qt5_DIR=${CMAKE_PREFIX_PATH}/Qt5/
           echo "CMAKE_PREFIX_PATH $CMAKE_PREFIX_PATH"
           echo "Qt5_DIR $Qt5_DIR"
-          . /opt/qt${QTVERMIN}/bin/qt${QTVERMIN}-env.sh
+          sudo mv /usr/bin/qmake /usr/bin/qmake5
+          sudo ln -s /${QT5_DIR}/$(find bin/ -name qmake) /usr/bin          
         fi
         echo "Qt version $(qmake -v | grep 'Qt' | awk ' { print $4 } ')"
         mkdir build
