--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -62,6 +62,7 @@ jobs:
           echo "CMAKE_PREFIX_PATH $CMAKE_PREFIX_PATH"
           echo "Qt5_DIR $Qt5_DIR"
           sudo mv /usr/bin/qmake /usr/bin/qmake5
+          find /${QT5_DIR} -name qmake
           sudo ln -s /${QT5_DIR}/$(find . -name qmake) /usr/bin          
         fi
         echo "Qt version $(qmake -v | grep 'Qt' | awk ' { print $4 } ')"
