--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -63,12 +63,12 @@ jobs:
           echo "Qt5_DIR $Qt5_DIR"
           sudo mv /usr/bin/qmake /usr/bin/qmake5
           find /${QT5_DIR} -name qmake
-          sudo ln -s /${QT5_DIR}/$(find . -name qmake) /usr/bin          
+          sudo ln -s $(find /${QT5_DIR} -name qmake) /usr/bin          
         fi
         echo "Qt version $(qmake -v | grep 'Qt' | awk ' { print $4 } ')"
         mkdir build
         cd build
-        #cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_NOGUI_FRONTEND=ON -DBUILD_QT_FRONTEND=ON -DUSE_DRMKMS=ON -DUSE_EGL=ON -DUSE_SDL2=ON -DUSE_WAYLAND=ON -DUSE_X11=ON -G Ninja ..
+        cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_NOGUI_FRONTEND=ON -DBUILD_QT_FRONTEND=ON -DUSE_DRMKMS=ON -DUSE_EGL=ON -DUSE_SDL2=ON -DUSE_WAYLAND=ON -DUSE_X11=ON -G Ninja ..
         ninja
         ../scripts/generate_appimages.sh $(pwd)
 
