--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -36,13 +36,13 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install cmake ninja-build ccache libsdl2-dev libgtk-3-dev qt${QTVERMIN}base qt${QTVERMIN}declarative qt${QTVERMIN}xmlpatterns qt${QTVERMIN}svg qt${QTVERMIN}tools qt${QTVERMIN}translations qt${QTVERMIN}wayland qt${QTVERMIN}webengine libegl1-mesa-dev libevdev-dev libgbm-dev libdrm-dev libwayland-dev libwayland-egl-backend-dev extra-cmake-modules libcurl4-gnutls-dev libxrandr-dev
 
-    - name: Install Qt6
-      uses: WillBrennan/yaqti@2021.07.29
-      with:
-        version: '6.2.0'
-        os: 'linux'
-        platform: 'desktop'
-        modules: 'qtwaylandcompositor'
+    #- name: Install Qt6
+    #  uses: WillBrennan/yaqti@2021.07.29
+    #  with:
+    #    version: '6.2.0'
+    #    os: 'linux'
+    #    platform: 'desktop'
+    #    modules: 'qtwaylandcompositor'
         
     - name: Compile build
       shell: bash
