--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -77,26 +77,26 @@ jobs:
         msbuild duckstation-uwp.sln /p:AppxBundle=Always /p:AppxPackageIsForStore=true /p:BuildAppxUploadPackageForUap=true /p:AppxBundlePlatforms="x64" /p:Configuration="ReleaseUWP" /p:Platform="x64" /t:Build
 
     - name: Grab AppX package
-      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
+      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/uwp'
       shell: cmd
       run: |
         copy build\ReleaseUWP-x64\duckstation-uwp\duckstation-uwp_1.0.0.0_Bundle\duckstation-uwp_1.0.0.0_x64_ReleaseUWP.appx duckstation-uwp.appx
 
     - name: Export certificate
-      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
+      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/uwp'
       shell: powershell
       run: |
         Get-PfxCertificate -FilePath .\src\duckstation-uwp\duckstation-uwp.pfx | Export-Certificate -FilePath duckstation-uwp.der -Type CERT
 
     - name: Upload AppX package
-      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
+      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/uwp'
       uses: actions/upload-artifact@v1
       with:
         name: "windows-uwp"
         path: "duckstation-uwp.appx"
 
     - name: Upload certificate
-      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
+      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/uwp'
       uses: actions/upload-artifact@v1
       with:
         name: "windows-uwp"
@@ -105,7 +105,7 @@ jobs:
   create-release:
     needs: [windows-uwp-build]
     runs-on: "ubuntu-20.04"
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/uwp'
     steps:
      
       - name: Download Windows UWP Artifact
@@ -135,13 +135,13 @@ jobs:
             linux-x64-appimage-qt-zsync/duckstation-qt-x64.AppImage.zsync
           
       - name: Create dev release
-        if: github.ref == 'refs/heads/dev'
+        if: github.ref == 'refs/heads/uwp'
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
-          title: "Latest Development Build"
+          title: "UWP Development Build"
           files: |
             windows/duckstation-windows-x64-release.zip
             windows/duckstation-windows-x64-release-symbols.zip
