--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -62,8 +62,9 @@ jobs:
       shell: powershell
       run: |
         $pwd
-        gc src\duckstation-uwp\duckstation-uwp.vcxproj -replace '<AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>', '<AppxPackageSigningEnabled>False</AppxPackageSigningEnabled>' | Out-File -encoding ASCII src\duckstation-uwp\duckstation-uwp.vcxproj
-        type src\duckstation-uwp\duckstation-uwp.vcxproj
+        Get-ChildItem
+        gc .\src\duckstation-uwp\duckstation-uwp.vcxproj -replace '<AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>', '<AppxPackageSigningEnabled>False</AppxPackageSigningEnabled>' | Out-File -encoding ASCII .\src\duckstation-uwp\duckstation-uwp.vcxproj
+        type .\src\duckstation-uwp\duckstation-uwp.vcxproj
         
     - name: Restore nuget packages
       shell: cmd
