--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -8,6 +8,9 @@ on:
       - 'scripts/*'
       - '.github/ISSUE_TEMPLATE/*'
   push:
+    branches:
+      - master
+      - dev
     paths-ignore:
       - '**.md'
       - 'appveyor.yml'
