--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -19,8 +19,8 @@ jobs:
   linux-build:
     runs-on: ubuntu-20.04
     env:
-      QTVER: 5.15.2
-      QTVERMIN: 515
+      QTVER: 5.12.8
+      QTVERMIN: 512
       UBUNTU_VER: focal
     steps:
     - uses: actions/checkout@v2.3.1
@@ -32,18 +32,15 @@ jobs:
       run: |
         sudo add-apt-repository -y ppa:beineri/opt-qt-${QTVER}-${UBUNTU_VER}
         sudo apt-get update
-        #sudo apt-get -y install cmake ninja-build ccache libsdl2-dev libgtk-3-dev libegl1-mesa-dev libevdev-dev libgbm-dev libdrm-dev libwayland-dev libwayland-egl-backend-dev extra-cmake-modules libcurl4-gnutls-dev libxrandr-dev
-        #sudo apt-get -y install cmake ninja-build ccache libsdl2-dev libgtk-3-dev qtbase5-dev qtbase5-dev-tools qtbase5-private-dev qt5-default qttools5-dev qtwayland5 libegl1-mesa-dev libevdev-dev libgbm-dev libdrm-dev libqt5waylandclient5-dev libqt5waylandcompositor5-dev libwayland-dev libwayland-egl-backend-dev extra-cmake-modules libcurl4-gnutls-dev libxrandr-dev
         sudo apt-get -y install cmake ninja-build ccache libsdl2-dev libgtk-3-dev qt${QTVERMIN}base qt${QTVERMIN}declarative qt${QTVERMIN}xmlpatterns qt${QTVERMIN}svg qt${QTVERMIN}tools qt${QTVERMIN}translations qt${QTVERMIN}wayland qt${QTVERMIN}webengine libegl1-mesa-dev libevdev-dev libgbm-dev libdrm-dev libwayland-dev libwayland-egl-backend-dev extra-cmake-modules libcurl4-gnutls-dev libxrandr-dev
-        #sudo apt-get -y install libfontconfig1-dev libfreetype6-dev libx11-dev libx11-xcb-dev libxext-dev libxfixes-dev libxi-dev libxrender-dev libxcb1-dev libxcb-glx0-dev libxcb-keysyms1-dev libxcb-image0-dev libxcb-shm0-dev libxcb-icccm4-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-shape0-dev libxcb-randr0-dev libxcb-render-util0-dev libxcb-util-dev libxcb-xinerama0-dev libxcb-xkb-dev libxkbcommon-dev libxkbcommon-x11-dev gstreamer1.0-gl gstreamer1.0-gtk3
         
-    - name: Install Qt6
-      uses: WillBrennan/yaqti@2021.07.29
-      with:
-        version: '6.2.0'
-        os: 'linux'
-        platform: 'desktop'
-        modules: 'qtwaylandcompositor'
+    #- name: Install Qt6
+    #  uses: WillBrennan/yaqti@2021.07.29
+    #  with:
+    #    version: '6.2.0'
+    #    os: 'linux'
+    #    platform: 'desktop'
+    #    modules: 'qtwaylandcompositor'
            
     - name: Compile build
       shell: bash
