run with min qt

--- a/.github/workflows/rolling-release.yml
+++ b/.github/workflows/rolling-release.yml
@@ -19,8 +19,8 @@ jobs:
   linux-build:
     runs-on: ubuntu-20.04
     env:
-      QTVER: 5.12.9
-      QTVERMIN: 512
+      QTVER: 5.15.2
+      QTVERMIN: 515
       UBUNTU_VER: focal
       QT6VERSION: 6.2.0
     steps:
@@ -38,7 +38,7 @@ jobs:
     #- name: Install Qt6
     #  uses: WillBrennan/yaqti@2021.07.29
     #  with:
-    #    version: "$QT6VERSION"
+    #    version: "${{ env.QT6VERSION }}"
     #    os: 'linux'
     #    platform: 'desktop'
     #    modules: 'qtwaylandcompositor'
@@ -49,7 +49,6 @@ jobs:
         QT5_DIR: "opt/qt${{ env.QTVERMIN }}"
         QT6_DIR: "qt/${{ env.QT6VERSION }}"
       run: |
-        echo "$QTVERMIN $QT5_DIR"
         if [[ -e $QT6_DIR ]]; then
           export CMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/$QT6_DIR/gcc_64
           export Qt6_DIR=${CMAKE_PREFIX_PATH}/lib/cmake/Qt6/
