--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,8 +139,13 @@ if(NOT ANDROID)
   if(NOT WIN32 AND USE_SDL2)
     find_package(SDL2 REQUIRED)
   endif()
-  if(BUILD_QT_FRONTEND)
-    find_package(Qt6 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
+  if(BUILD_QT_FRONTEND AND USE_QT6)
+  	find_package(Qt6 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
+  	include_directories(${Qt6Gui_PRIVATE_INCLUDE_DIRS})
+  endif()	
+  if(BUILD_QT_FRONTEND AND NOT USE_QT6)
+	  find_package(Qt5 5.15 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
+	  include_directories(${Qt5Gui_PRIVATE_INCLUDE_DIRS})
   endif()
 endif()
 
