set Qt6 submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,19 +133,20 @@ if(WIN32 AND USE_SDL2)
   endif()
 endif()
 
-
 # Required libraries.
 if(NOT ANDROID)
   if(NOT WIN32 AND USE_SDL2)
     find_package(SDL2 REQUIRED)
   endif()
-  if(BUILD_QT_FRONTEND)
-    find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
-    if (${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-        find_package(Qt6 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
-    else()
-        find_package(Qt5 5.15 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
-    endif()
+  if(BUILD_QT_FRONTEND AND USE_QT6)
+  	set(Qt6_DIR "${CMAKE_CURRENT_SOURCE_DIR}/dep/msvc/qt/6.2.0/gcc_64/lib/cmake/Qt6")
+  	set(CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/dep/msvc/qt/6.2.0/gcc_64/")
+  	find_package(Qt6 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
+  	include_directories(${Qt6Gui_PRIVATE_INCLUDE_DIRS})
+  endif()	
+  if(BUILD_QT_FRONTEND AND NOT USE_QT6)
+	  find_package(Qt5 5.15 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
+	  include_directories(${Qt5Gui_PRIVATE_INCLUDE_DIRS})
   endif()
 endif()
 
